--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <div class="section_1_child_2">
+    <div class="section_1_child_2" id="new">
       <h1>New</h1>
       <div class="article_1">
         <h3>Hydrogen VS Electric Cars</h3>
