--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
     </div>
 
-    <div class="section_1_child_2" id="new">
-      <h1>New</h1>
+    <div class="section_1_child_2" >
+      <h1 id="new">New</h1>
       <div class="article_1">
         <h3>Hydrogen VS Electric Cars</h3>
         <p>Wil hydrogen-fueled cars ever catch up to EVs</p>
